--- a/index.html
+++ b/index.html
@@ -8,109 +8,134 @@
 </head>
 <body>
 
-<header class="hero">
-    <img src="assets/FotoCV.jpg" alt="Michelle Ambriz" class="profile-img">
-    <h1>Paola Michelle Ambriz Soto</h1>
-    <h2>Backend Developer | Ingeniería en Sistemas</h2>
-    <div class="buttons">
-        <a href="mailto:pamiamso2005@gmail.com" class="btn">Contáctame</a>
-        <a href="https://github.com/Michelleas31" target="_blank" class="btn-outline">GitHub</a>
-    </div>
-</header>
+<div class="cv-page">
 
-<section class="about">
-    <h3>Sobre mí</h3>
-    <p>
-        Estudiante de sexto semestre de Ingeniería en Sistemas Computacionales en el Tecnológico Nacional de México, con enfoque en desarrollo backend y diseño de bases de datos. Me interesa construir soluciones funcionales, escalables y bien estructuradas, aplicando principios de modelado, normalización y buenas prácticas de programación.
-        Me caracterizo por ser analítica, organizada y orientada a la resolución de problemas. Disfruto especialmente la lógica, la estructuración de la información y el diseño previo antes de programar.
-    </p>
-</section>
+    <div class="cv-container">
 
-<section class="skills">
-    <h3>Habilidades Técnicas</h3>
-    <div class="skills-grid">
-        <div>
-            <h4>Lenguajes</h4>
-            <p>C#, Java, Python, C++, SQL</p>
+        <header class="cv-header">
+            <div class="header-content">
+
+                <img src="assets/FotoCV.jpg" alt="Michelle Ambriz" class="header-img">
+
+                <div class="header-text">
+                    <h1>Paola Michelle Ambriz Soto</h1>
+                    <p>Backend Developer | Ingeniería en Sistemas Computacionales</p>
+
+                    <div class="header-buttons">
+                        <a href="mailto:pamiamso2005@gmail.com" class="btn">Contáctame</a>
+                        <a href="https://github.com/Michelleas31" target="_blank" class="btn-outline">GitHub</a>
+                    </div>
+                </div>
+
+            </div>
+        </header>
+
+        <div class="cv-body">
+            <main class="main-content">
+
+                <section class="about">
+                    <h3>Sobre mí</h3>
+                    <p>
+                        Estudiante de sexto semestre de Ingeniería en Sistemas Computacionales con enfoque en desarrollo backend y diseño de bases de datos.
+                        Me especializo en construir soluciones escalables aplicando principios de modelado, normalización y buenas prácticas.
+                    </p>
+                </section>
+
+                <section class="projects">
+                    <h3>Proyectos</h3>
+                    <div class="card">
+                        <h4>Sistema de Gestión de Proyectos Académicos</h4>
+                        <p>
+                            Aplicación desarrollada en C# con arquitectura por capas, control de roles,
+                            seguimiento de entregas y barra de progreso.
+                        </p>
+                        <p><strong>Stack:</strong> C#, .NET, MariaDB, XAML</p>
+                    </div>
+                </section>
+
+                <section class="education">
+                    <h3>Educación</h3>
+                    <div class="card">
+                        <p><strong>Ingeniería en Sistemas Computacionales</strong></p>
+                        <p>Tecnológico Nacional de México</p>
+                    </div>
+                </section>
+
+            </main>
+
+            <aside class="sidebar">
+
+                <section>
+                    <h3>Habilidades Técnicas</h3>
+                    <div class="sidebar-card">
+                        <p><strong>Lenguajes:</strong> C#, Java, Python, C++, SQL</p>
+                        <p><strong>Frameworks:</strong> .NET, Windows Forms</p>
+                        <p><strong>BD:</strong> MySQL, MariaDB</p>
+                        <p><strong>Herramientas:</strong> Git, Docker, VS Code</p>
+                    </div>
+                </section>
+
+                <section>
+                    <h3>Idiomas</h3>
+
+                    <div class="language-item">
+                        <div class="language-header">
+                            <span>Inglés</span>
+                            <span>C1</span>
+                        </div>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 85%;"></div>
+                        </div>
+                        <p class="language-desc">
+                            Dominio avanzado profesional. Comunicación técnica fluida en entornos académicos y tecnológicos.
+                        </p>
+                    </div>
+
+                </section>
+
+                <section>
+                    <h3>Certificaciones</h3>
+
+                    <div class="sidebar-card">
+                        <h4>Certificado GitHub</h4>
+                        <button class="btn-outline cert-btn"
+                            data-img="assets/certificadogithub.jpg">
+                            Ver certificado
+                        </button>
+                    </div>
+
+                    <div class="sidebar-card">
+                        <h4>Certificado Inglés C1</h4>
+                        <button class="btn-outline cert-btn"
+                            data-img="assets/nivelinglesplatzi.PNG">
+                            Ver certificado
+                        </button>
+                    </div>
+
+                    <div class="sidebar-card">
+                        <h4>Certificado HTML & CSS</h4>
+                        <button class="btn-outline cert-btn"
+                            data-img="assets/CertificadoHTML.jpg">
+                            Ver certificado
+                        </button>
+                    </div>
+
+                </section>
+
+            </aside>
+
         </div>
-        <div>
-            <h4>Frameworks</h4>
-            <p>.NET, Windows Forms</p>
-        </div>
-        <div>
-            <h4>Bases de Datos</h4>
-            <p>MySQL, MariaDB</p>
-        </div>
-        <div>
-            <h4>Herramientas</h4>
-            <p>Git, Docker, VS Code</p>
-        </div>
-    </div>
-</section>
 
-<section class="languages">
-    <h3>Idiomas</h3>
-    <div class="project-card">
-        <h4>Inglés – Nivel C1</h4>
-        <p>Dominio avanzado profesional. Comunicación técnica fluida en entornos académicos y tecnológicos.</p>
-    </div>
-</section>
-
-<section class="certifications">
-    <h3>Certificaciones</h3>
-
-    <div class="project-card">
-        <h4>Certificado GitHub</h4>
-        <p>Platzi Bussines</p>
-        <button class="btn-outline cert-btn" 
-            data-img="assets/certificadogithub.jpg">
-        Ver certificado
-        </button>
     </div>
 
-    <div class="project-card">
-        <h4>Certificado de Inglés C1</h4>
-        <p>Platzi Bussines</p>
-        <button class="btn-outline cert-btn" 
-            data-img="assets/nivelinglesplatzi.PNG">
-        Ver certificado
-        </button>
-    </div>
-
-    <div class="project-card">
-        <h4>Certificado CSS y HTML</h4>
-        <p>Linkedin</p>
-        <button class="btn-outline cert-btn" 
-            data-img="assets/CertificadoHTML.jpg">
-        Ver certificado
-        </button>
-    </div>
-
-</section>
-
-<section class="projects">
-    <h3>Proyectos</h3>
-    <div class="project-card">
-        <h4>Sistema de Gestión de Proyectos Académicos</h4>
-        <p>Aplicación desarrollada en C# con roles de administrador, profesor y alumno, seguimiento de entregas y control de progreso.</p>
-    </div>
-</section>
-
-<section class="education">
-    <h3>Educación</h3>
-    <p>Ingeniería en Sistemas Computacionales - Tecnológico Nacional de México</p>
-</section>
-
-<footer>
-    <p>© 2026 Michelle Ambriz</p>
-</footer>
-
-<script src="js/main.js"></script>
+</div>
 
 <div id="modal" class="modal">
     <span class="close">&times;</span>
     <img class="modal-content" id="modal-img">
 </div>
+
+<script src="js/main.js"></script>
 
 </body>
 </html>
